--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
 
 <body>
     
-    <header>
-    </header>
-    <main></main>
+    <nav class="flex-container">
+
+        <div class="nav-items">logo</div>
+        <div class="nav-items"><i class="fa-solid fa-bars"></i></div>
+
+        <div class="nav-items-desktop">
+            <div class="nav-item"></div>
+            <div class="nav-item"></div>
+            <div class="nav-item"></div>
+            <div class="nav-item"></div>
+            <div class="nav-item"><a href="#" class="cta" >Get Started</a></div>    
+        </div>
+
+    </nav>
+
+    <main>
+        <section class="feature flex-container"></section>
+        <section class="planning flex-container"></section>
+        <section class="expert flex-container"></section>
+        <section class="benefits flex-container"></section>
+        <section class="About-us flex-container"></section>
+        <section class="get-started flex-container"></section>
+    </main>
+
+    <footer class="terms"></footer>
 
 </body>
 </html>
