--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div class="flex-container container">
 
-                <div class="card2">
+                <div class="card2 white">
 
                     <img src="./img/planning1.png" alt="planning">
                     <h1>Strategic Planning</h1>
@@ -182,8 +182,27 @@
         </section>
 
 
-        <section class="About-us"></section>
-        <section class="get-started"></section>
+        <section class="About-us">
+
+            <div class="flex-container container">
+                <div class="card5">
+                    <h1 class="purple">About Us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae fugiat animi sunt esse quis assumenda enim totam, earum sit magnam in eum non neque quo incidunt suscipit fugit ab ipsam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, qui numquam! Accusamus amet, aut suscipit, eligendi architecto temporibus recusandae minima tempora provident eaque consectetur, consequatur odio minus ut magnam natus?</p>
+                </div>
+
+                <div class="card5">
+                    <img src="./img/about.jpg" alt="about">
+                    <h2 class="purple">I help companies tincindunt tortor aliquam nulla facilisi cras fementum odio.</h2>
+                    <div><a class="cta bkg-purple white"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a></div>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="get-started bkg-purple">
+            
+        </section>
 
     </main>
 
