--- a/index.html
+++ b/index.html
@@ -200,8 +200,15 @@
 
         </section>
 
-        <section class="get-started bkg-purple">
-            
+        <section class="get-started white bkg-purple">
+            <div class="container txt-center">
+                <p>GET STARTED</p>
+                <h2>Simple, transparent Pricing</h2>
+                <h1>It's Free!</h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae maiores porro nihil ad eligendi, cupiditate quis sunt asperiores, quas nesciunt culpa ea, sapiente aliquam reprehenderit laborum rem explicabo? Amet, quis?</p>
+                <div><a href="#" class="cta purple bkg-white">Get Started</a></div>
+                <p>Copyright 2021 Boolean · Classe XX · <u>Privacy policy</u></p>
+            </div>
         </section>
 
     </main>
