--- a/index.html
+++ b/index.html
@@ -213,7 +213,17 @@
 
     </main>
 
-    <footer class="terms"></footer>
+    <footer class="terms">
+        <div class="container">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid tempora quibusdam iure ipsa ipsam quidem, cumque, nulla neque asperiores sapiente hic nostrum doloremque eius deserunt voluptatem, possimus harum quas. Mollitia!
+            </p>
+
+            <p>
+                <u>Lorem ipsum</u> dolor sit amet consectetur adipisicing
+            </p>
+        </div>
+    </footer>
 
 </body>
 </html>
