--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                 </div>
 
                 <div class="card3 bkg-white">
-                    <img src="./img/planning2.png" alt="planning">
-                    <h2>App Development</h2>
-                    <p>Develop an on-demand app for your delivery business to reach your targeted customers withouth any interruption</p>
+                    <img class="m2-bottom" src="./img/planning2.png" alt="planning">
+                    <h2 class="m2-bottom">App Development</h2>
+                    <p class="m2-bottom">Develop an on-demand app for your delivery business to reach your targeted customers withouth any interruption</p>
                     <div class="cta-next bkg-purple"><i class="fa-solid fa-arrow-down"></i></div>
                 </div>
 
