--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="card2 white">
 
                     <img src="./img/planning1.png" alt="planning">
-                    <h1>Strategic Planning</h1>
+                    <h1 class="h1-tablet-grow">Strategic Planning</h1>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, similique? Veniam earum quis a, eius quidem, praesentium reiciendis velit eveniet cumque temporibus nam delectus inventore repellat rem ipsam blanditiis unde.</p>
                     
                 </div>
@@ -115,28 +115,28 @@
                     <img src="./img/testimonial1.jpg" alt="experts">
                     <div class="description">
 
-                        <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ratione inventore aut velit, maxime assumenda, laboriosam tempore reiciendis laborum ducimus fugit magni et. Cumque assumenda</p>
+                        <p class="white"><i class="fa-solid fa-quote-left font-larger"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ratione inventore aut velit, maxime assumenda, laboriosam tempore reiciendis laborum ducimus fugit magni et. Cumque assumenda <i class="fa-solid fa-quote-right font-larger"></i></p>
                         <h3 class="white">NAT REYNOLDS</h3>
 
                     </div>
                 </div>
 
                 <div class="card4 flex-container">
-                    <img src="./img/testimonial1.jpg" alt="experts">
+                    <img src="./img/testimonial2.jpg" alt="experts">
                     <div class="description">
 
-                        <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ratione inventore aut velit, maxime assumenda, laboriosam tempore reiciendis laborum ducimus fugit magni et. Cumque assumenda</p>
-                        <h3 class="white">NAT REYNOLDS</h3>
+                        <p class="white"><i class="fa-solid fa-quote-left font-larger"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ratione inventore aut velit, maxime assumenda, laboriosam tempore reiciendis laborum ducimus fugit magni et. Cumque assumenda <i class="fa-solid fa-quote-right font-larger"></i></p>
+                        <h3 class="white">CELIA ALMEDA</h3>
 
                     </div>
                 </div>
 
                 <div class="card4 flex-container">
-                    <img src="./img/testimonial1.jpg" alt="experts">
+                    <img src="./img/testimonial3.jpg" alt="experts">
                     <div class="description">
 
-                        <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ratione inventore aut velit, maxime assumenda, laboriosam tempore reiciendis laborum ducimus fugit magni et. Cumque assumenda</p>
-                        <h3 class="white">NAT REYNOLDS</h3>
+                        <p class="white"><i class="fa-solid fa-quote-left font-larger"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ratione inventore aut velit, maxime assumenda, laboriosam tempore reiciendis laborum ducimus fugit magni et. Cumque assumenda <i class="fa-solid fa-quote-right font-larger"></i></p>
+                        <h3 class="white">BOB ROBERTS</h3>
 
                     </div>
                 </div>
