Abous-us funzionante

--- a/index.html
+++ b/index.html
@@ -151,49 +151,50 @@
         <!-- elemento benefits -->
         <section class="benefits">
 
-            <h1 class="white">Benefits of working with us</h1>
+            <h1 class="white ">Benefits of working with us</h1>
             <div class="flex-container container">
                 <div class="card bkg-white">
-                    <h1 class="purple">01</h1>
-                    <h2 class="purple">Hight Quality</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
+                    <h1 class="purple h1-tablet-grow">01</h1>
+                    <h2 class="purple m2-bottom">Hight Quality</h2>
+                    <p class="m2-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
                     <div><a class="cta bkg-purple white">more</a></div>
                 </div>
 
                 <div class="card bkg-white">
-                    <h1 class="purple">01</h1>
-                    <h2 class="purple">Hight Quality</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
+                    <h1 class="purple h1-tablet-grow">01</h1>
+                    <h2 class="purple m2-bottom">Hight Quality</h2>
+                    <p class="m2-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
                     <div><a class="cta bkg-purple white">more</a></div>
                 </div>
 
                 <div class="card bkg-white">
-                    <h1 class="purple">01</h1>
-                    <h2 class="purple">Hight Quality</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
+                    <h1 class="purple h1-tablet-grow">01</h1>
+                    <h2 class="purple m2-bottom">Hight Quality</h2>
+                    <p class="m2-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
                     <div><a class="cta bkg-purple white">more</a></div>
                 </div>
 
                 <div class="card bkg-white">
-                    <h1 class="purple">01</h1>
-                    <h2 class="purple">Hight Quality</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
+                    <h1 class="purple h1-tablet-grow">01</h1>
+                    <h2 class="purple m2-bottom">Hight Quality</h2>
+                    <p class="m2-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
                     <div><a class="cta bkg-purple white">more</a></div>
                 </div>
 
                 <div class="card bkg-white">
-                    <h1 class="purple">01</h1>
-                    <h2 class="purple">Hight Quality</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
+                    <h1 class="purple h1-tablet-grow">01</h1>
+                    <h2 class="purple m2-bottom">Hight Quality</h2>
+                    <p class="m2-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
                     <div><a class="cta bkg-purple white">more</a></div>
                 </div>
 
                 <div class="card bkg-white">
-                    <h1 class="purple">01</h1>
-                    <h2 class="purple">Hight Quality</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
+                    <h1 class="purple h1-tablet-grow">01</h1>
+                    <h2 class="purple m2-bottom">Hight Quality</h2>
+                    <p class="m2-bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ratione molestias</p>
                     <div><a class="cta bkg-purple white">more</a></div>
                 </div>
+
             </div>
 
         </section>
@@ -205,13 +206,18 @@
             <div class="flex-container container">
                 <div class="card5">
                     <h1 class="purple">About Us</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae fugiat animi sunt esse quis assumenda enim totam, earum sit magnam in eum non neque quo incidunt suscipit fugit ab ipsam.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, qui numquam! Accusamus amet, aut suscipit, eligendi architecto temporibus recusandae minima tempora provident eaque consectetur, consequatur odio minus ut magnam natus?</p>
+                    <p class="m2-bottom">Lorem ipsum dolorLorem ipsum dolor sit amet consectetur adipisicing elit sit amet consectetur adipisicing elit. Beatae fugiat animi sunt esse quis assumenda enim totam, earum sit magnam in eum non neque quo incidunt suscipit fugit ab ipsam.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur adipisicing elit adipisicing elit. Quis, qui numquam! Accusamus amet, aut suscipit, eligendi architecto temporibus recusandae minima tempora provident eaque consectetur, consequatur odio minus ut magnam natus?</p>
                 </div>
 
                 <div class="card5">
-                    <img src="./img/about.jpg" alt="about">
-                    <h2 class="purple">I help companies tincindunt tortor aliquam nulla facilisi cras fementum odio.</h2>
+                    
+                    <div class="quotation-image">
+                        <img src="./img/about.jpg" alt="about">
+                        <i class="fa-solid fa-quote-left"></i>
+                    </div>
+
+                    <h2 class="purple m2-bottom">I help companies tincindunt tortor aliquam nulla facilisi cras fementum odio.</h2>
                     <div><a class="cta bkg-purple white"><i class="fa-brands fa-linkedin"></i> Find me on linkedin</a></div>
                 </div>
             </div>
