--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
 
                 <div class="card5">
-                    
+
                     <div class="quotation-image">
                         <img src="./img/about.jpg" alt="about">
                         <i class="fa-solid fa-quote-left"></i>
@@ -229,10 +229,10 @@
         <section class="get-started white bkg-purple">
             <div class="container txt-center">
                 <p>GET STARTED</p>
-                <h2>Simple, transparent Pricing</h2>
-                <h1>It's Free!</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae maiores porro nihil ad eligendi, cupiditate quis sunt asperiores, quas nesciunt culpa ea, sapiente aliquam reprehenderit laborum rem explicabo? Amet, quis?</p>
-                <div><a href="#" class="cta purple bkg-white">Get Started</a></div>
+                <h2 class="m2-bottom m1-top">Simple, transparent Pricing</h2>
+                <h1 class="m2-bottom orange">It's Free!</h1>
+                <p class="m2-bottom">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae maiores porro nihil ad eligendi, cupiditate quis sunt asperiores, quas nesciunt culpa ea, sapiente aliquam reprehenderit laborum rem explicabo? Amet, quis?</p>
+                <div class="m2-bottom"><a href="#" class="cta purple bkg-white no-decoration">Get Started</a></div>
                 <p>Copyright 2021 Boolean · Classe XX · <u>Privacy policy</u></p>
             </div>
         </section>
