--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
 
 
     <!-- blocco footer -->
-    <footer class="terms">
+    <footer class="terms txt-center">
         <div class="container">
-            <p>
+            <p class="m4-bottom">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid tempora quibusdam iure ipsa ipsam quidem, cumque, nulla neque asperiores sapiente hic nostrum doloremque eius deserunt voluptatem, possimus harum quas. Mollitia!
             </p>
 
             <p>
-                <u>Lorem ipsum</u> dolor sit amet consectetur adipisicing
+                <u>Lorem ipsum</u> dolor sit amet consectetur adipisicing bla bla <u>boolean careers</u>
             </p>
         </div>
     </footer>
